<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context=".Activity.Login">


    <LinearLayout
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:layout_marginTop="65dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_gravity="center_horizontal"
            app:srcCompat="@drawable/logo" />

<!--        <TextView-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:textStyle="bold"-->
<!--            android:textSize="40sp"-->
<!--            android:paddingTop="10dp"-->
<!--            android:paddingBottom="10dp"-->
<!--            android:gravity="center"-->
<!--            android:textColor="#5200FF"-->
<!--            android:text="@string/WelcometoApp" />-->

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_marginTop="10dp"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/txtUsername"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginBottom="30dp"
                android:background="@drawable/input_login"
                android:drawableStart="@drawable/user_login"
                android:drawablePadding="10dp"
                android:hint="Username"
                android:maxLines="1"
                android:inputType="text"
                android:padding="10dp"
                android:textColor="@color/orange"
                android:textColorHint="@color/orange"
                android:textSize="16dp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/txtPassword"
                android:layout_width="match_parent"
                android:inputType="textPassword"
                android:layout_height="50dp"
                android:background="@drawable/input_login"
                android:drawableLeft="@drawable/user_password"
                android:drawableRight="@drawable/show_password"
                android:drawablePadding="10dp"
                android:hint="Password"
                android:padding="10dp"
                android:textColor="@color/orange"
                android:textColorHint="@color/orange"
                android:textSize="16dp"
                android:textStyle="bold" />

            <RelativeLayout
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:layout_height="wrap_content">

                <CheckBox
                    android:id="@+id/isRemember"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:text="@string/Rememberme"
                    android:textColor="@color/xam"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/forgotPassword"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerInParent="true"
                    android:layout_gravity="center|right|end"
                    android:text="@string/forgot_password_string"
                    android:textColor="@color/red"
                    android:textSize="16sp"
                    android:textStyle="bold" />
            </RelativeLayout>

            <LinearLayout
                android:layout_marginTop="15dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <Button
                    android:id="@+id/btnSignIn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="20sp"
                    android:paddingEnd="20sp"
                    android:paddingTop="10sp"
                    android:layout_marginTop="20sp"
                    android:paddingBottom="10sp"
                    android:text="@string/SIGNIN"
                    android:backgroundTint="#fff"
                    android:textColor="#000"
                    android:textStyle="bold"
                    android:textSize="24dp"
                    android:layout_gravity="center"
                    android:background="@drawable/input_login"/>

                <TextView
                    android:id="@+id/createAccount"
                    android:layout_marginTop="100dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/create_an_account_string"
                    android:textStyle="bold"
                    android:textSize="20dp"
                    android:textColor="@color/signup"
                    android:layout_gravity="center" />
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>

</LinearLayout>