<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context=".Activity.OrderDetailActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/background_toolbar"
        android:layout_marginBottom="20dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="40dp"
            android:layout_height="match_parent"
            android:id="@+id/imgPreviousDetail"
            android:src="@drawable/baseline_arrow_back_24"
            app:tint="@color/orange" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textColor="@color/orange"
            android:layout_marginLeft="30sp"
            android:layout_marginEnd="40dp"
            android:gravity="center"
            android:text="@string/OrderDetail"
            android:textSize="30sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20sp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/OrderID"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvOderIDDetail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:text="DH00005"
            android:textColor="?android:attr/colorFocusedHighlight"
            android:textSize="20sp"
            android:textStyle="bold" />
        <TextView
            android:id="@+id/tvTimeOrderDetail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="65sp"
            android:padding="5sp"
            android:text="01/01/2023"
            android:textColor="@color/orange"
            android:textStyle="bold"
            android:textSize="20sp" />
    </LinearLayout>
<!--    <LinearLayout-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginLeft="20sp"-->
<!--        android:orientation="horizontal">-->

<!--        <TextView-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:text="@string/OrderTime"-->
<!--            android:textColor="@color/black"-->
<!--            android:textStyle="bold"-->
<!--            android:textSize="20sp" />-->

<!--        <TextView-->
<!--            android:id="@+id/tvTimeOrderDetail"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:paddingLeft="10dp"-->
<!--            android:text="01/01/2023"-->
<!--            android:textColor="@color/orange"-->
<!--            android:textStyle="bold"-->
<!--            android:textSize="20sp" />-->
<!--    </LinearLayout>-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5sp"
        android:layout_marginLeft="20sp"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Status"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvStatusDetail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="10sp"
            android:text="Đang xử lý"
            android:textColor="@color/orange"
            android:textSize="20sp"
            android:textStyle="bold" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <ListView
            android:id="@+id/lvOrderDetail"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:divider="@color/black"
            android:footerDividersEnabled="false"
            android:padding="10dp" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="bottom|right"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="30dp"
        android:paddingEnd="20dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/total"
            android:textColor="@color/black"
            android:textSize="30sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvTotalsDetail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="101"
            android:textColor="@color/design_default_color_error"
            android:textSize="30sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=".00$"
            android:textColor="@color/design_default_color_error"
            android:textSize="30sp"
            android:textStyle="bold" />
    </LinearLayout>
</LinearLayout>